dijkstra用のエンドポイント
